# bender_test

./: README.md
bender_homework/: CMakeLists.txt  package.xml
bender_homework/launch/: t1.launch
bender_homework/src/bender_homework/: t1.py
bender_workshop/: setup.md
bender_workshop/src/bender_workshop/: test_server.py  test_subscriber.py
gazebo_test/: CMakeLists.txt  package.xml
gazebo_test/config/: quad_display.rviz
gazebo_test/include/gazebo_test/: gazebo_ros_quad.h
gazebo_test/launch/: display.launch  gazebo.launch  joy.launch
gazebo_test/meshes/: quad.stl
gazebo_test/robots/: quad.sdf  quad.urdf
gazebo_test/scripts/: update_models.sh
gazebo_test/src/: gazebo_ros_quad.cpp
gazebo_test/src/gazebo_test/: joy_wrench.py
gazebo_test/urdf/: common.xacro  quad.urdf.xacro
grupo1/bender_workshop/: CMakeLists.txt  package.xml  setup.md
grupo1/bender_workshop/src/bender_workshop/: test_publisher.py  test_server.py  test_suscriber.py
